--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="styles/style.css" type="text/css">
 </head>
   <center>
-    <h1>"Bitacora de clase"</h1>
+    <h1><strong>"Bitacora de clase"</strong></h1>
   </center>
      <center>
       <p align="right"><strong>01/02/2023</strong></p>
@@ -35,4 +35,4 @@
         con un grosor y color a nuestro gusto, de mismo modo poner mas espacio entre lineas y todo esto gracias a css 
         es uno de los lenguajes más importantes que se utilizan para ordenar las instrucciones referentes a la apariencia
         de un sitio y presentar los contenidos de una página de forma atractiva.</p>
-       <center><img src="imagenes/css.jpg"></center>
+      <center><img src="imagenes/css.jpg"></center>
