--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -1,15 +1,16 @@
 <HTML>
-<head>
- <title>Bitacora</title>
-  <link rel="stylesheet" href="styles/style.css" type="text/css">
+<head><!--encabezado-->
+ <title>Bitacora</title><!--titulo de la pagina web-->
+  <link rel="stylesheet" href="styles/style.css" type="text/css"><!--conexion con el archivo css-->
 </head>
-  <center>
-    <h1><strong>"Bitacora de clase"</strong></h1>
+  <center><!--centramos el texto titular-->
+    <h1>"Bitacora de clase"</h1>
   </center>
-     <center>
+  <!--movemos a la derecha la fecha -->
       <p align="right"><strong>01/02/2023</strong></p>
-     </center>
-<body background="imagenes/spider-fondo.jpg">
+      <!--fondo-->
+<body>
+  <!--titulo del html-->
  <h2>HTML</h2>
   <p>HTML es un  estándar que sirve como referencia del software
    que conecta con la elaboración de páginas web en sus diferentes versiones,
@@ -20,19 +21,38 @@
    el tiempo y nuestros aprendizajes sean aun mas grande podremos actualizar y/o mejorar
    nuestro procedimiento a la hora de crear un codigo.
   </p>
+<!--imagen de html5-->
       <center><img src="imagenes/html5.jpg" ></center>
-
-  <p align="right"><strong>08/02/2023</strong></p>
-    <p>El dia de hoy el profesor Gerardo nos dio la instruccion de hacer nuestro mayor esfurzo en hacer 
-    que la pagina que hemos creado se vea lo mejor posible, y pues yo que tengo la misma imaginacion que un
-    pez cree un fondo...con spider-man(era de esperarse la verdad).
-  </p>
+<!--movemos a la derecha la fecha-->
+  <p align="right"><strong>08/02/2023</strong></p><!--(strong) es para poner un texto en negritas-->
+    <p>El dia de hoy el profesor Gerardo nos dio la instruccion de hacer nuestro mayor 
+      esfurzo en hacer que la pagina que hemos creado se vea lo mejor posible, y pues yo
+      que tengo la misma imaginacion que un pez cree un fondo...con spider-man(era de esperarse
+       la verdad).</p>
+<!--imagen de spider-man-->
       <center><img src="imagenes/spider-man.jpg"</center>
-
+<!--movemos la fecha a la derecha-->
     <p align="right"><strong>09/02/2023</strong></p>
      <p>El dia de hoy el profesor gerardo nos enseño los "styles", con los que podemos "customizar" o "personalizar"
         los textos en nuestro archivo html cambiando el color y grosr de nuestro texto al igual que ponerle un cuadro
         con un grosor y color a nuestro gusto, de mismo modo poner mas espacio entre lineas y todo esto gracias a css 
         es uno de los lenguajes más importantes que se utilizan para ordenar las instrucciones referentes a la apariencia
         de un sitio y presentar los contenidos de una página de forma atractiva.</p>
-      <center><img src="imagenes/css.jpg"></center>
+       <center><img src="imagenes/css.jpg"></center><!--imagen de css-->
+<!--movemos la fecha a la derecha-->
+      <p align="right"><strong>15/02/2023</strong></p>
+       <p>Hola yo de nuevo, el profesor Gerardo nos hizo una "inspeccion" en la que de manera aleatoria escogia a alumnos 
+        y reaccionaba a nuestra pagina de html y nos daria consejos para mejorar la misma, y yo que tengo suerte como nadie
+        (cosa que nose si esta bien o mal),yo fui uno de los que tuvo que enseñar su pagina, y pues si el profe supo que lo 
+        hice de spider-man, me dijo que debia corregir el grosor de la letra para que sea mas legible y que mueva un poco a 
+        los personajes del fondo para que no estorbe el texto.</p>
+<!--imagen que me define-->
+        <center><img src="imagenes/homero.jpg"></center>
+
+        <p align="right"><strong>20/02/2023</strong></p>
+          <p>El dia de hoy nos dieron la instruccion de hacer una pagina de login (o para iniciar una sesion)
+            no les miento la verdad es que si me salio muy minimalista la version 1.0 😔, y nada vere que mejoras
+            puedo hacerle para que se vea mas formal y profesional
+          </p>
+          <center><img src="imagenes/login.jpg"></center>
+
