--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -56,3 +56,11 @@
           </p>
           <center><img src="imagenes/login.jpg"></center>
 
+        <p align="right"><strong>23/02/2023</strong></p>
+         <p>Desde el dia lunes nos dieron el trabajo de hacer una pagina de login y de register para una pagina web, la verdad es que 
+          no soy muy bueno programando, de hecho si te soy sincero seria el ultimo al que le pedirias que te haga un codigo sobre algo en especifico
+          ,asi que con mi poca habilidad intelectual para hacer codigos y mi inpaciente forma de ser empece a hacer el codigo y como ya se 
+          veia venir, si...se ve del asco, pero hey almenos ya supe como hacer un boton en html :D.
+         </p>
+         <center><img src="imagenes/Captura de pantalla (1).png"></center>
+
