--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -1,66 +1,84 @@
 <HTML>
+
 <head><!--encabezado-->
- <title>Bitacora</title><!--titulo de la pagina web-->
+  <title>Bitacora</title><!--titulo de la pagina web-->
   <link rel="stylesheet" href="styles/style.css" type="text/css"><!--conexion con el archivo css-->
 </head>
-  <center><!--centramos el texto titular-->
-    <h1>"Bitacora de clase"</h1>
-  </center>
-  <!--movemos a la derecha la fecha -->
-      <p align="right"><strong>01/02/2023</strong></p>
-      <!--fondo-->
+<center><!--centramos el texto titular-->
+  <h1>"Bitacora de clase"</h1>
+</center>
+<!--movemos a la derecha la fecha -->
+<p align="right"><strong>01/02/2023</strong></p>
+<!--fondo-->
+
 <body>
   <!--titulo del html-->
- <h2>HTML</h2>
-  <p>HTML es un  estándar que sirve como referencia del software
-   que conecta con la elaboración de páginas web en sus diferentes versiones,
-   define una estructura básica y un código (denominado HTML) para la definición
-   de contenido de una página web, como texto, imágenes, vídeos, juegos, entre otros…
-   Se nos enseño a como empezar a crear el codigo, se nos presentaron las etiquetas o
-   marcas basicas y se nos puso a trabajar en esta bitacora que conforme valla pasando
-   el tiempo y nuestros aprendizajes sean aun mas grande podremos actualizar y/o mejorar
-   nuestro procedimiento a la hora de crear un codigo.
+  <h2>HTML</h2>
+  <p>HTML es un estándar que sirve como referencia del software
+    que conecta con la elaboración de páginas web en sus diferentes versiones,
+    define una estructura básica y un código (denominado HTML) para la definición
+    de contenido de una página web, como texto, imágenes, vídeos, juegos, entre otros…
+    Se nos enseño a como empezar a crear el codigo, se nos presentaron las etiquetas o
+    marcas basicas y se nos puso a trabajar en esta bitacora que conforme valla pasando
+    el tiempo y nuestros aprendizajes sean aun mas grande podremos actualizar y/o mejorar
+    nuestro procedimiento a la hora de crear un codigo.
   </p>
-<!--imagen de html5-->
-      <center><img src="imagenes/html5.jpg" ></center>
-<!--movemos a la derecha la fecha-->
+  <!--imagen de html5-->
+  <center><img src="imagenes/html5.jpg"></center>
+  <!--movemos a la derecha la fecha-->
   <p align="right"><strong>08/02/2023</strong></p><!--(strong) es para poner un texto en negritas-->
-    <p>El dia de hoy el profesor Gerardo nos dio la instruccion de hacer nuestro mayor 
-      esfurzo en hacer que la pagina que hemos creado se vea lo mejor posible, y pues yo
-      que tengo la misma imaginacion que un pez cree un fondo...con spider-man(era de esperarse
-       la verdad).</p>
-<!--imagen de spider-man-->
-      <center><img src="imagenes/spider-man.jpg"</center>
-<!--movemos la fecha a la derecha-->
+  <p>El dia de hoy el profesor Gerardo nos dio la instruccion de hacer nuestro mayor
+    esfurzo en hacer que la pagina que hemos creado se vea lo mejor posible, y pues yo
+    que tengo la misma imaginacion que un pez cree un fondo...con spider-man(era de esperarse
+    la verdad).</p>
+  <!--imagen de spider-man-->
+  <center><img src="imagenes/spider-man.jpg" </center>
+    <!--movemos la fecha a la derecha-->
     <p align="right"><strong>09/02/2023</strong></p>
-     <p>El dia de hoy el profesor gerardo nos enseño los "styles", con los que podemos "customizar" o "personalizar"
-        los textos en nuestro archivo html cambiando el color y grosr de nuestro texto al igual que ponerle un cuadro
-        con un grosor y color a nuestro gusto, de mismo modo poner mas espacio entre lineas y todo esto gracias a css 
-        es uno de los lenguajes más importantes que se utilizan para ordenar las instrucciones referentes a la apariencia
-        de un sitio y presentar los contenidos de una página de forma atractiva.</p>
-       <center><img src="imagenes/css.jpg"></center><!--imagen de css-->
-<!--movemos la fecha a la derecha-->
-      <p align="right"><strong>15/02/2023</strong></p>
-       <p>Hola yo de nuevo, el profesor Gerardo nos hizo una "inspeccion" en la que de manera aleatoria escogia a alumnos 
-        y reaccionaba a nuestra pagina de html y nos daria consejos para mejorar la misma, y yo que tengo suerte como nadie
-        (cosa que nose si esta bien o mal),yo fui uno de los que tuvo que enseñar su pagina, y pues si el profe supo que lo 
-        hice de spider-man, me dijo que debia corregir el grosor de la letra para que sea mas legible y que mueva un poco a 
-        los personajes del fondo para que no estorbe el texto.</p>
-<!--imagen que me define-->
-        <center><img src="imagenes/homero.jpg"></center>
+    <p>El dia de hoy el profesor gerardo nos enseño los "styles", con los que podemos "customizar" o "personalizar"
+      los textos en nuestro archivo html cambiando el color y grosr de nuestro texto al igual que ponerle un cuadro
+      con un grosor y color a nuestro gusto, de mismo modo poner mas espacio entre lineas y todo esto gracias a css
+      es uno de los lenguajes más importantes que se utilizan para ordenar las instrucciones referentes a la apariencia
+      de un sitio y presentar los contenidos de una página de forma atractiva.</p>
+    <center><img src="imagenes/css.jpg"></center><!--imagen de css-->
+    <!--movemos la fecha a la derecha-->
+    <p align="right"><strong>15/02/2023</strong></p>
+    <p>Hola yo de nuevo, el profesor Gerardo nos hizo una "inspeccion" en la que de manera aleatoria escogia a alumnos
+      y reaccionaba a nuestra pagina de html y nos daria consejos para mejorar la misma, y yo que tengo suerte como
+      nadie
+      (cosa que nose si esta bien o mal),yo fui uno de los que tuvo que enseñar su pagina, y pues si el profe supo que
+      lo
+      hice de spider-man, me dijo que debia corregir el grosor de la letra para que sea mas legible y que mueva un poco
+      a
+      los personajes del fondo para que no estorbe el texto.</p>
+    <!--imagen que me define-->
+    <center><img src="imagenes/homero.jpg"></center>
 
-        <p align="right"><strong>20/02/2023</strong></p>
-          <p>El dia de hoy nos dieron la instruccion de hacer una pagina de login (o para iniciar una sesion)
-            no les miento la verdad es que si me salio muy minimalista la version 1.0 😔, y nada vere que mejoras
-            puedo hacerle para que se vea mas formal y profesional
-          </p>
-          <center><img src="imagenes/login.jpg"></center>
+    <p align="right"><strong>20/02/2023</strong></p>
+    <p>El dia de hoy nos dieron la instruccion de hacer una pagina de login (o para iniciar una sesion)
+      no les miento la verdad es que si me salio muy minimalista la version 1.0 😔, y nada vere que mejoras
+      puedo hacerle para que se vea mas formal y profesional
+    </p>
+    <center><img src="imagenes/login.jpg"></center>
 
-        <p align="right"><strong>23/02/2023</strong></p>
-         <p>Desde el dia lunes nos dieron el trabajo de hacer una pagina de login y de register para una pagina web, la verdad es que 
-          no soy muy bueno programando, de hecho si te soy sincero seria el ultimo al que le pedirias que te haga un codigo sobre algo en especifico
-          ,asi que con mi poca habilidad intelectual para hacer codigos y mi inpaciente forma de ser empece a hacer el codigo y como ya se 
-          veia venir, si...se ve del asco, pero hey almenos ya supe como hacer un boton en html :D.
-         </p>
-         <center><img src="imagenes/Captura de pantalla (1).png"></center>
+    <p align="right"><strong>23/02/2023</strong></p>
+    <p>Desde el dia lunes nos dieron el trabajo de hacer una pagina de login y de register para una pagina web, la
+      verdad es que
+      no soy muy bueno programando, de hecho si te soy sincero seria el ultimo al que le pedirias que te haga un codigo
+      sobre algo en especifico
+      ,asi que con mi poca habilidad intelectual para hacer codigos y mi inpaciente forma de ser empece a hacer el
+      codigo y como ya se
+      veia venir, si...se ve del asco, pero hey almenos ya supe como hacer un boton en html :D.
+    </p>
+    <center><img src="imagenes/Captura de pantalla (1).png"></center>
 
+    <p align="right"><strong>27/02/2023</strong></p>
+    <p>El dia de hoy se nos dio una pequeña pruebita de las que seran las preguntas en el examen que se aproxima,
+      el profe empezo a citar las preguntas y de manera aleatoria empezo a escoger a compañeros para que respondieran las pregutas,
+      gracias a mi suerte parker no me escogio a mi, pero cuando el profe empezo a pedir voluntarios, decidi ser uno de ellos y respondi
+      una que otra pregunta mal, algunas bien pero la verdad es que la mayoria fueron mal respondidas, nos dio mas informacion
+      sobre como sera el examen y sobre que otros temas habran preguntas, tras esto nos dio la instruccion de crear algunos productos y ofrecerlos en la 
+      pagina principal de nuestra pagina web.
+    </p>
+    <h3>EJEMPLO:</h3>
+    <center><img src="imagenes/ejemplo.jpg"></center>
