--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -82,3 +82,11 @@
     </p>
     <h3>EJEMPLO:</h3>
     <center><img src="imagenes/ejemplo.jpg"></center>
+
+     <p align="right"><strong>01/03/2023</strong></p>
+     <p>Bien, desde el dia 27 por la noche me puse a trabajar en el index, para ser especificos, en la pagina principal de la cafeteria, 
+      me puse a trabajar en las imagenes que estarian en este, y al parecer se ve bien, a lo mejor estan muy grandes pero prefiero grandes y que se vean
+      a chicas y que no vea absolutamente nada, puse creo 16 o 17 productos, se nos especifico que debian ser maximo 20 y minimo 15 asi que me fui a la media.
+     </p>
+     <center><img src="imagenes/cap_home.png"</center>
+
