--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -53,14 +53,14 @@
       los personajes del fondo para que no estorbe el texto.</p>
     <!--imagen que me define-->
     <center><img src="imagenes/homero.jpg"></center>
-
+<!--actualizacion del 20 de febrero -->
     <p align="right"><strong>20/02/2023</strong></p>
     <p>El dia de hoy nos dieron la instruccion de hacer una pagina de login (o para iniciar una sesion)
       no les miento la verdad es que si me salio muy minimalista la version 1.0 😔, y nada vere que mejoras
       puedo hacerle para que se vea mas formal y profesional
-    </p>
+    </p><!--imagen ejemplo del login-->
     <center><img src="imagenes/login.jpg"></center>
-
+<!--actualizacion del 23 de febrero-->
     <p align="right"><strong>23/02/2023</strong></p>
     <p>Desde el dia lunes nos dieron el trabajo de hacer una pagina de login y de register para una pagina web, la
       verdad es que
@@ -69,9 +69,9 @@
       ,asi que con mi poca habilidad intelectual para hacer codigos y mi inpaciente forma de ser empece a hacer el
       codigo y como ya se
       veia venir, si...se ve del asco, pero hey almenos ya supe como hacer un boton en html :D.
-    </p>
+    </p><!--progreso de registro-->
     <center><img src="imagenes/Captura de pantalla (1).png"></center>
-
+<!--actualizacion del 27 de febrero-->
     <p align="right"><strong>27/02/2023</strong></p>
     <p>El dia de hoy se nos dio una pequeña pruebita de las que seran las preguntas en el examen que se aproxima,
       el profe empezo a citar las preguntas y de manera aleatoria empezo a escoger a compañeros para que respondieran las pregutas,
@@ -79,14 +79,13 @@
       una que otra pregunta mal, algunas bien pero la verdad es que la mayoria fueron mal respondidas, nos dio mas informacion
       sobre como sera el examen y sobre que otros temas habran preguntas, tras esto nos dio la instruccion de crear algunos productos y ofrecerlos en la 
       pagina principal de nuestra pagina web.
-    </p>
+    </p><!--ejemplo de articulos en amazon-->
     <h3>EJEMPLO:</h3>
     <center><img src="imagenes/ejemplo.jpg"></center>
-
+<!--actualizacion del 1 de marzo-->
      <p align="right"><strong>01/03/2023</strong></p>
      <p>Bien, desde el dia 27 por la noche me puse a trabajar en el index, para ser especificos, en la pagina principal de la cafeteria, 
       me puse a trabajar en las imagenes que estarian en este, y al parecer se ve bien, a lo mejor estan muy grandes pero prefiero grandes y que se vean
       a chicas y que no vea absolutamente nada, puse creo 16 o 17 productos, se nos especifico que debian ser maximo 20 y minimo 15 asi que me fui a la media.
-     </p>
+     </p><!--imagen de el resultado de hacer lo de los productos-->
      <center><img src="imagenes/cap_home.png"</center>
-
