--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -88,4 +88,12 @@
       me puse a trabajar en las imagenes que estarian en este, y al parecer se ve bien, a lo mejor estan muy grandes pero prefiero grandes y que se vean
       a chicas y que no vea absolutamente nada, puse creo 16 o 17 productos, se nos especifico que debian ser maximo 20 y minimo 15 asi que me fui a la media.
      </p><!--imagen de el resultado de hacer lo de los productos-->
-     <center><img src="imagenes/cap_home.png"</center>
+     <center><img src="imagenes/cap_home.png"></center>
+<!--actualizacion del 6 de marzo-->
+     <p align="right"><strong>06/03/2023</strong></p>
+     <p>El dia de hoy el profesor Gerardo nos dio la orden de crear un diagrama entidad relacion de la pagina web
+      usando la base de datos que ya teniamos con el profesor Martin, nos explico que un archivo PHP se usa para 
+      conectar un archivo HTML con un archivo SQL, ya teniendo la base de datos nos dio la instruccion de poner categorias.</p>
+     <h4>EJEMPLO:</h4>
+<!--imagen ejemplo de la tabla entidad relacion-->
+     <center><img src="imagenes/tablaentidad.jpg"></center>
