--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -53,14 +53,14 @@
       los personajes del fondo para que no estorbe el texto.</p>
     <!--imagen que me define-->
     <center><img src="imagenes/homero.jpg"></center>
-<!--actualizacion del 20 de febrero -->
+    <!--actualizacion del 20 de febrero -->
     <p align="right"><strong>20/02/2023</strong></p>
     <p>El dia de hoy nos dieron la instruccion de hacer una pagina de login (o para iniciar una sesion)
       no les miento la verdad es que si me salio muy minimalista la version 1.0 😔, y nada vere que mejoras
       puedo hacerle para que se vea mas formal y profesional
     </p><!--imagen ejemplo del login-->
     <center><img src="imagenes/login.jpg"></center>
-<!--actualizacion del 23 de febrero-->
+    <!--actualizacion del 23 de febrero-->
     <p align="right"><strong>23/02/2023</strong></p>
     <p>Desde el dia lunes nos dieron el trabajo de hacer una pagina de login y de register para una pagina web, la
       verdad es que
@@ -71,29 +71,50 @@
       veia venir, si...se ve del asco, pero hey almenos ya supe como hacer un boton en html :D.
     </p><!--progreso de registro-->
     <center><img src="imagenes/Captura de pantalla (1).png"></center>
-<!--actualizacion del 27 de febrero-->
+    <!--actualizacion del 27 de febrero-->
     <p align="right"><strong>27/02/2023</strong></p>
     <p>El dia de hoy se nos dio una pequeña pruebita de las que seran las preguntas en el examen que se aproxima,
-      el profe empezo a citar las preguntas y de manera aleatoria empezo a escoger a compañeros para que respondieran las pregutas,
-      gracias a mi suerte parker no me escogio a mi, pero cuando el profe empezo a pedir voluntarios, decidi ser uno de ellos y respondi
-      una que otra pregunta mal, algunas bien pero la verdad es que la mayoria fueron mal respondidas, nos dio mas informacion
-      sobre como sera el examen y sobre que otros temas habran preguntas, tras esto nos dio la instruccion de crear algunos productos y ofrecerlos en la 
+      el profe empezo a citar las preguntas y de manera aleatoria empezo a escoger a compañeros para que respondieran
+      las pregutas,
+      gracias a mi suerte parker no me escogio a mi, pero cuando el profe empezo a pedir voluntarios, decidi ser uno de
+      ellos y respondi
+      una que otra pregunta mal, algunas bien pero la verdad es que la mayoria fueron mal respondidas, nos dio mas
+      informacion
+      sobre como sera el examen y sobre que otros temas habran preguntas, tras esto nos dio la instruccion de crear
+      algunos productos y ofrecerlos en la
       pagina principal de nuestra pagina web.
     </p><!--ejemplo de articulos en amazon-->
     <h3>EJEMPLO:</h3>
     <center><img src="imagenes/ejemplo.jpg"></center>
-<!--actualizacion del 1 de marzo-->
-     <p align="right"><strong>01/03/2023</strong></p>
-     <p>Bien, desde el dia 27 por la noche me puse a trabajar en el index, para ser especificos, en la pagina principal de la cafeteria, 
-      me puse a trabajar en las imagenes que estarian en este, y al parecer se ve bien, a lo mejor estan muy grandes pero prefiero grandes y que se vean
-      a chicas y que no vea absolutamente nada, puse creo 16 o 17 productos, se nos especifico que debian ser maximo 20 y minimo 15 asi que me fui a la media.
-     </p><!--imagen de el resultado de hacer lo de los productos-->
-     <center><img src="imagenes/cap_home.png"></center>
-<!--actualizacion del 6 de marzo-->
-     <p align="right"><strong>06/03/2023</strong></p>
-     <p>El dia de hoy el profesor Gerardo nos dio la orden de crear un diagrama entidad relacion de la pagina web
-      usando la base de datos que ya teniamos con el profesor Martin, nos explico que un archivo PHP se usa para 
-      conectar un archivo HTML con un archivo SQL, ya teniendo la base de datos nos dio la instruccion de poner categorias.</p>
-     <h4>EJEMPLO:</h4>
-<!--imagen ejemplo de la tabla entidad relacion-->
-     <center><img src="imagenes/tablaentidad.jpg"></center>
+    <!--actualizacion del 1 de marzo-->
+    <p align="right"><strong>01/03/2023</strong></p>
+    <p>Bien, desde el dia 27 por la noche me puse a trabajar en el index, para ser especificos, en la pagina principal
+      de la cafeteria,
+      me puse a trabajar en las imagenes que estarian en este, y al parecer se ve bien, a lo mejor estan muy grandes
+      pero prefiero grandes y que se vean
+      a chicas y que no vea absolutamente nada, puse creo 16 o 17 productos, se nos especifico que debian ser maximo 20
+      y minimo 15 asi que me fui a la media.
+    </p><!--imagen de el resultado de hacer lo de los productos-->
+    <center><img src="imagenes/cap_home.png"></center>
+    
+    <p align="right"><strong>06/03/2023</strong></p>
+    <p>El dia de hoy el profesor Gerardo nos dio la orden de crear un diagrama entidad relacion de la pagina web
+      usando la base de datos que ya teniamos con el profesor Martin, nos explico que un archivo PHP se usa para
+      conectar un archivo HTML con un archivo SQL, ya teniendo la base de datos nos dio la instruccion de poner
+      categorias.</p>
+    <h4>EJEMPLO:</h4>
+    <!--imagen ejemplo de la tabla entidad relacion-->
+    <center><img src="imagenes/tablaentidad.jpg"></center>
+    <!--actualizacion del 8 de marzo-->
+    <p align="right"><strong>08/03/2023</strong></p>
+    <p>El dia de hoy el profesor Gerarado nos introdujo a PHP dandonos una especie de mini-curso para saber de este,
+       nos explico que los PHP son para vicular un archivo HTML con un SQL haciendo que nuestra pagina tenga una base de datos.
+    </p>
+    <center><img src="imagenes/php_img.jpg"></center>
+    <!--actualizacion del 9 de marzo-->
+    <p align="right"><strong>09/03/2023</strong></p>
+    <p>El dia de hoy el profe nos dejo modificar un poco nustra base de datos ya existente
+      y implementar en nuestra pagina web la base de datos ya mencionada, y como ya se sabe,
+      la suerte Parker siempre hace de las suyas y no me sale :).
+    </p>
+    <center><img src="imagenes/suerte_prkr.jpg"></center>
