--- a/Bitacora(Gerardo)/index.html
+++ b/Bitacora(Gerardo)/index.html
@@ -4,9 +4,11 @@
   <title>Bitacora</title><!--titulo de la pagina web-->
   <link rel="stylesheet" href="styles/style.css" type="text/css"><!--conexion con el archivo css-->
 </head>
-<center><!--centramos el texto titular-->
-  <h1>"Bitacora de clase"</h1>
-</center>
+<nav>
+  <center><!--centramos el texto titular-->
+    <h1>"Bitacora de clase"</h1>
+  </center>
+</nav>
 <!--movemos a la derecha la fecha -->
 <p align="right"><strong>01/02/2023</strong></p>
 <!--fondo-->
@@ -96,7 +98,7 @@
       y minimo 15 asi que me fui a la media.
     </p><!--imagen de el resultado de hacer lo de los productos-->
     <center><img src="imagenes/cap_home.png"></center>
-    
+
     <p align="right"><strong>06/03/2023</strong></p>
     <p>El dia de hoy el profesor Gerardo nos dio la orden de crear un diagrama entidad relacion de la pagina web
       usando la base de datos que ya teniamos con el profesor Martin, nos explico que un archivo PHP se usa para
@@ -108,7 +110,8 @@
     <!--actualizacion del 8 de marzo-->
     <p align="right"><strong>08/03/2023</strong></p>
     <p>El dia de hoy el profesor Gerarado nos introdujo a PHP dandonos una especie de mini-curso para saber de este,
-       nos explico que los PHP son para vicular un archivo HTML con un SQL haciendo que nuestra pagina tenga una base de datos.
+      nos explico que los PHP son para vicular un archivo HTML con un SQL haciendo que nuestra pagina tenga una base de
+      datos.
     </p>
     <center><img src="imagenes/php_img.jpg"></center>
     <!--actualizacion del 9 de marzo-->
@@ -118,3 +121,18 @@
       la suerte Parker siempre hace de las suyas y no me sale :).
     </p>
     <center><img src="imagenes/suerte_prkr.jpg"></center>
+    <!--actualizacion del 9 de marzo-->
+    <p align="right"><strong>09/03/2023</strong></p>
+    <p>El dia de hoy el profe nos dejo modificar un poco nustra base de datos ya existente
+      y implementar en nuestra pagina web la base de datos ya mencionada, y como ya se sabe,
+      la suerte Parker siempre hace de las suyas y no me sale :).
+    </p>
+    <center><img src="imagenes/suerte_prkr.jpg"></center>
+    <!--actualizacion del 10 de abril-->
+    <p align="right"><strong>10/04/2023</strong></p>
+    <p>El dia de hoy nos quedamos sin nada que hacer debido a que mi trabajo ya habia acabado, el proyecto
+      aun seguia en etapa de trabajo para el equipo de documentacion, yo soy del equipo de front-end, y diseñe
+      la parte del menu que le apareceria al usuario,y la verdad quedo facha.
+    </p>
+    <h3>EJEMPLO:</h3>
+    <center><img src="imagenes/menu-integrado-web.jpg"></center>
