--- a/Bitacora-Rodriguez-Avelar-Ricardo/Bitacora-Rodriguez-Avelar-Ricardo-50a711e0a8312df889130ee24a2181376013e380/Bitacora-Rodriguez-Avelar-Ricardo-main/Bitacora(Gerardo)/index.html
+++ b/Bitacora-Rodriguez-Avelar-Ricardo/Bitacora-Rodriguez-Avelar-Ricardo-50a711e0a8312df889130ee24a2181376013e380/Bitacora-Rodriguez-Avelar-Ricardo-main/Bitacora(Gerardo)/index.html
@@ -162,9 +162,51 @@
     <p align="right"><strong>8/05/2023</strong></p>
     <p>Ha pasado mucho, cambios de diseño, errores en los mismos, cambios en la base y en la estructura de la pagina principal
       , tuvimos ideas alternativas para un posible cambio en el diseño de la pagina debido a que no convencia
-      tanto su aspecto pero al final(creo yo), tomamos la decision correcta.
+      tanto su aspecto pero al final<b>(creo yo)</b>, tomamos la decision correcta.
     </p>
     <center><img src="imagenes/shrek.jpg"></center>
 
+    <!--actualizacion del 11 de marzo-->
+    <p align="right"><strong>11/05/2023</strong></p>
+    <p>El dia de hoy me dieron trabajo, hacer mas posibles diseños para insertarlos en el codigo <b>(la verdad no se por que
+      me hacen hacer codigo, no se hacer nada, literal lo que e hecho ha estado tan horrible que lo han reemplazado con otros codigos
+      , y literal hacen lo mismo que yo pero por x o y razon es mejor que el yo hize, y lo entiendo, la verdad es que pues esto
+      es un trabajo del que depende la calificacion de todo el equipo y requiere del mayor esfuerzo posible, y mis codigos son tan banales
+      que simplemente los hacen de mejores para bien de todos)</b>,watafa me queria expresar un monton vea?.
+    </p>
 
+    <!--actualizacion del 15 de marzo-->
+    <p align="right"><strong>15/05/2023</strong></p>
+    <p>El diseño ha sido integrado, pero como dije hace unos dias fue reemplazado, y no le voy a mentir se ve mucho mejor que 
+      el que habia hecho yo, por ahora solo queda esperar a la siguiente orden.
+    </p>
+
+    <!--actualizacion del 18 de marzo-->
+    <p align="right"><strong>18/05/2023</strong></p>
+    <p>El dia de hoy Juan pa nos dio la instruccion de hacer diseños de ciertas partes de la pagina para implementarlos despues, 
+      lo especial en estos diseños es que serian responsivos, creando los diseños para los dispositivos moviles<b>(en total son 4 las partes de la pagina
+      y hice 4 de cada uno)</b>.
+    </p>
+
+    <!--actualizacion del 22 de marzo-->
+    <p align="right"><strong>22/05/2023</strong></p>
+    <p>Los diseños ya estan pero sale resulta y resalta que el archivo literalmente estaba de cabeza y ademas a Juan no le gusto ningun diseño,
+      dijo que no me preocupara o estresara, asi que tome su consejo y puse atencion a lo que el queria ver en el diseño y como lo queria ver,
+      preste mas atencion a sus palabras y literal casi que completabamos lo que el otro queria decir, despues de que acabo de explicar me puse a hacer los diseños
+      y acabe todos esta misma noche, me siento util aun que es una lastima que no pueda sentirme asi siempre :/. 
+
+    <!--actualizacion del 24 de marzo-->
+    <p align="right"><strong>24/05/2023</strong></p>
+    <p>Juan no respondio ante mis diseños, y Orlando me aviso que Juan ya habia dado luz verde para empezar a implementar los diseños a 
+      la pagina, me puse en marcha, pero algo me detuvo<b>¿Que fue?</b>al parecer las partes del programa no necesitaban implementarle lo responsivo,
+      debido a que solo eran tablas, asi que decidi descansar, hasta que me dio nuevo trabajo, hacer un nuevo diseño para el menu estando responsivo, para 
+      moviles.
+    </p>
+
+     <!--actualizacion del 25 de marzo-->
+     <p align="right"><strong>25/05/2023</strong></p>
+     <p>No pude avanzar nada de el diseño debido a que mi compu murio, tuve que hacerlo desde cero en la prepa, pero fue facil, investigue en el cel
+      sobre un contador con un boton de mas y menos<b>Ya que era necesario y eso pedia Juan en el diseño</b>para poder sumar o restar la cantidad que se queria de 
+      ese producto, asi que lo implemente al diseño de computadora <b>(error inicial, lo hice sin el querie *UPSI*)</b> y en 2 horas lo consegui, logre el diseño.
+     </p>
     </div>
